tests/ui/async-await/issue-101715.stderr
error[E0277]: the trait `IntoFuture` is not implemented for `()`
  --> $DIR/issue-101715.rs:11:10
   |
LL |         .await
   |         -^^^^^
   |         ||
   |         |the trait `IntoFuture` is not implemented for `()`, which is required by `(): IntoFuture`
   |         help: remove the `.await`
   |
   = note: required for `()` to implement `IntoFuture`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
